refactor(emi): 修改ID生成方式